# red_light_violation_detector

./: .gitignore  CMakeLists.txt  README.md  README.txt
Dataset_Traffic_light_project/Label/image1/: image1_label.json
Dataset_Traffic_light_project/Label/image10/: image10_label.json
Dataset_Traffic_light_project/Label/image2/: image2_label.json
Dataset_Traffic_light_project/Label/image3/: image3_label.json
Dataset_Traffic_light_project/Label/image4/: image4_label.json
Dataset_Traffic_light_project/Label/image5/: image5_label.json
Dataset_Traffic_light_project/Label/image6/: image6_label.json
Dataset_Traffic_light_project/Label/image7/: image7_label.json
Dataset_Traffic_light_project/Label/image8/: image8_label.json
Dataset_Traffic_light_project/Label/image9/: image9_label.json
include/: Metrics.h  StopLineDetector.h  TrafficLightDetector.h  VehicleDetector.hpp  ViolationDetector.h  metrics.h  stopline_detector.h  trafficlight_detector.h  vehicle_detector.hpp  violation_detector.h
src/: Metrics.cpp  StopLineDetector.cpp  TrafficLightDetector.cpp  VehicleDetector.cpp  ViolationDetector.cpp  main.cpp  metrics.cpp  stopline_detector.cpp  trafficlight_detector.cpp  vehicle_detector.cpp  violation_detector.cpp
